add signup activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.comp3350.webudget.presentation.MasterActivity"></activity>
-        <activity android:name="com.comp3350.webudget.presentation.LoginActivity"></activity>
-        <activity android:name="com.comp3350.webudget.presentation.MainActivity">
+        <activity android:name=".presentation.SignupActivity"></activity>
+        <activity android:name=".presentation.MasterActivity" />
+        <activity android:name=".presentation.LoginActivity" />
+        <activity android:name=".presentation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +23,6 @@
         <meta-data
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
-
     </application>
 
     <uses-feature android:name="android.hardware.type.watch" />
